crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/array_length/division_by_zero/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 5462] Error: Invalid array length, expected integer literal or constant expression.
    ╭─[input.sol:10:13]
    │
 10 │     uint256[A] x;
    │             ┬  
    │             ╰── Error occurred here.
────╯
